--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.0",
+    "mongoose": "^4.7.2",
     "react": "15.4.1",
     "react-native": "0.39.1",
-    "react-native-navigation": "^2.0.0-experimental.152"
+    "react-native-navigation": "^2.0.0-experimental.152",
+    "websocket": "^1.0.23"
   },
   "devDependencies": {
     "babel-jest": "17.0.2",
