--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.0",
+    "bluebird": "^3.4.7",
     "mongoose": "^4.7.2",
     "native-base": "^0.5.18",
     "react": "15.4.1",
